// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileUpload> Should output a child button element 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  />
</DocumentFragment>
`;

exports[`<FileUpload> Should output a child input element 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  />
</DocumentFragment>
`;

exports[`<FileUpload> check if cancelIcon and checkedIcon changes default icon 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  >
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check2-circle me-2"
      />
      <span
        class="filename"
        id="test.txt"
      >
        test.txt
      </span>
      <button
        aria-describedby="test.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-octagon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check2-circle me-2"
      />
      <span
        class="filename"
        id="hello.txt"
      >
        hello.txt
      </span>
      <button
        aria-describedby="hello.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-octagon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check2-circle me-2"
      />
      <span
        class="filename"
      />
      <button
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-octagon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check2-circle me-2"
      />
      <span
        class="filename"
        id="item"
      >
        item
      </span>
      <button
        aria-describedby="item"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-octagon"
        />
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<FileUpload> should have li named 'test.txt' and not 'hello.txt', upon removeFile 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  >
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="test.txt"
      >
        test.txt
      </span>
      <button
        aria-describedby="test.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="hello.txt"
      >
        hello.txt
      </span>
      <button
        aria-describedby="hello.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
      />
      <button
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="item"
      >
        item
      </span>
      <button
        aria-describedby="item"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<FileUpload> should render a ul with list items, upon uploading 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  >
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="test.txt"
      >
        test.txt
      </span>
      <button
        aria-describedby="test.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="hello.txt"
      >
        hello.txt
      </span>
      <button
        aria-describedby="hello.txt"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
      />
      <button
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check-lg check-icon me-2"
      />
      <span
        class="filename"
        id="item"
      >
        item
      </span>
      <button
        aria-describedby="item"
        aria-label="remove file"
        class="bg-transparent border-0 ms-2"
      >
        <i
          class="bi bi-x-circle x-circle-icon"
        />
      </button>
    </li>
  </ul>
</DocumentFragment>
`;
